src/test/ui/impl-trait/hidden-type-is-opaque-2.stderr
error[E0282]: type annotations needed
  --> $DIR/hidden-type-is-opaque-2.rs:9:9
   |
LL |         cont.reify_as();
   |         ^^^^ cannot infer type
   |
   = note: type must be known at this point

error[E0282]: type annotations needed
  --> $DIR/hidden-type-is-opaque-2.rs:18:9
   |
LL |         cont.reify_as();
   |         ^^^^ cannot infer type
   |
   = note: type must be known at this point

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0282`.
